<resources>
    <string name="app_name">Battery Alarm</string>

    <!--test id-->
    <string name="mob_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_id">ca-app-pub-3940256099942544/9214589741</string>

    <string name="pinlock_title">Enter Pin Code</string>
    <string name="pinlock_settitle">Set Pin Code</string>
    <string name="pinlock_firsttry">Wrong Pin Code: First Try</string>
    <string name="pinlock_secondtry">Wrong Pin Code: Second Try</string>
    <string name="pinlock_wrongpin">Wrong Pin code</string>
    <string name="pinlock_secondPin">Enter Pin Code Again</string>
    <string name="pinlock_tryagain">Pin Codes Are Not The Same</string>
    <string name="pinlock_fingerprint">Use Fingerprint</string>

    <string name="title_home">Battery Alarm</string>
    <string name="title_dashboard">Theft Alarm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_str">Welcome to</string>
    <string name="battery_str">Battery Alarm!</string>
    <string name="full_battery_alarm">Full Battery Alarm</string>
    <string name="anti_theft_alarm">Anti Theft Alarm</string>
    <string name="msg_splash">This app help you to save energy \n and protect ypur phone and battery.</string>
    <string name="msg_view">Estimated Finish At 1 hours 35 minutes</string>
    <string name="_30">30</string>
    <string name="per">%</string>
    <string name="time_remaining">TIME REMAINING</string>
    <string name="phone">Phone</string>
    <string name="movie">Movie</string>
    <string name="music">Music</string>
    <string name="camera">Camera</string>
    <string name="alarm_sound_slient">Alarm Sound Slient</string>
    <string name="alarm_ring">Alarm Ring</string>
    <string name="alarm_with_flashlight">Alarm with Flashlight</string>
    <string name="set_alarm">SET ALARM</string>
    <string name="txt_plugg">Activate Alarm while charger is unplugged</string>
    <string name="txt_message">Charger device to protect.Unplug will turn on the alarm. Exit will turn off protection</string>
    <string name="activate_alarm">Activate Alarm</string>
    <string name="congratulations">Congratulations!</string>
    <string name="unlock_preium">You have unlock get all premium features!</string>
    <string name="ok">OK</string>
    <string name="share_app">Share this app</string>
    <string name="cancle">CANCLE</string>
    <string name="select_percentage">Select Percentage</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="unlock_to_pro">UNLOCK TO PRO</string>
    <string name="remove_unwanted_ads">Remove unwanted ads</string>
    <string name="unlock_now">UNLOCK NOW</string>
    <string name="change_passcode">change passcode</string>
    <string name="set_password">Set password</string>
    <string name="set_passcode">Set Passcode</string>
    <string name="intruder_s_photo_details">Intruder’s Photo Details</string>
    <string name="log_history">Log History</string>
    <string name="set_alarm_volume_level">Set Alarm Volume Level</string>
    <string name="level_5">Level 5</string>
    <string name="alarm_vibration">Alarm Vibration</string>
    <string name="repeat_alarm">Repeat Alarm</string>
    <string name="_3_times">3 Times</string>
    <string name="in_app_purchase_remove_ads">In-App Purchase (Remove Ads)</string>
    <string name="just_2_99">Just $2.99</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_this_app">Share This App</string>
    <string name="feedback">Feedback</string>
    <string name="terms_policy">Terms Policy</string>
    <string name="app_version">App Version</string>
    <string name="touch_id_or_face_id">Touch ID Or Face ID</string>
    <string name="it_s_ok">It’s OK</string>
    <string name="please_rate_your_experience_n_using_our_app">Please Rate your experience \n using our app.</string>
    <string name="enjoying_the_app">Enjoying the App?</string>
    <string name="loved_it">Loved It!</string>
    <string name="stop_alarm">Stop Alarm</string>

    <string name="txtDescriptionGDPR">By proceeding, you agree with our \n  <a href="http://www.google.com">Terms</a>  and <a href="http://www.google.com">Privacy Policy</a> .</string>
    <string name="set_persantage">Set Persantage</string>
    <string name="set_time">Set Time</string>
    <string name="set_timer">Set Timer</string>
    <string name="persantage">Persantage</string>
    <string name="delete_all">Delete All</string>
    <string name="set_charging">Set Charging:</string>
    <string name="discharge">Discharge:</string>
    <string name="share">Share</string>
    <string name="close">Close</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="inapp_msg">Enjoy on ad-free experience while \n helping support development</string>
    <string name="unlock_now_">Unlock now $2.99</string>
    <string name="eastimated_finish">Eastimated finish At 1 hours 30 min</string>
    <string name="charging">Charging....</string>
    <string name="alert">"Alert "</string>
    <string name="no_internet">No Internet Connection Available</string>
    <string name="txt_failed">Purchase Failed</string>
    <string name="fail_msg">No money was taken from account. Please try again.</string>
    <string name="intruder_logs">Intruder Logs</string>
    <string name="select_time">Select Time</string>


</resources>
