<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/mainBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        android:id="@+id/rel_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:id="@+id/img_plugg"
            android:layout_height="@dimen/_15sdp"
            android:layout_width="@dimen/_15sdp"
            android:src="@drawable/ic_back_"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_toEndOf="@+id/img_plugg"
            android:textSize="@dimen/_12sdp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/intruderlogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_history"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/deleteall"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete All"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_12sdp" />


    <RelativeLayout
        android:id="@+id/rel_inapp"
        android:padding="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_below="@+id/rel_back"
        android:background="#007BFF"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_pro"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/ic_gold_crown"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txt_unlock"
            android:layout_toEndOf="@+id/img_pro"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlock_to_pro"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/txt_remove"
            android:layout_toEndOf="@+id/img_pro"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_below="@+id/txt_unlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_unwanted_ads"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_10ssp" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/ic_button_yello"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:textColor="#000000"
            android:text="@string/unlock_now"
            android:textSize="@dimen/_12sdp" />


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_history"
        android:layout_below="@+id/rel_inapp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
